samples/_failures_safe/1761425675_15dd1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b668fee4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b668fee4.c:179:13: error: expected declaration or statement at end of input
  179 |             token.line = line;
      |             ^~~~~
./samples/SAFE/__tmp_b668fee4.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b668fee4.c:179:13: error: expected declaration or statement at end of input
